[package]
name = "grid-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://bevyengine.org/learn/book/getting-started/setup/ recommends "dynamic" feature for dev, but not release
bevy = { version = "0.8", features = ["dynamic"] }
noise = "0.7.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3