[package]
name = "grid-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://bevyengine.org/learn/book/getting-started/setup/ recommends "dynamic" feature for dev, but not release.
# > NOTE: Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib
# > alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = ["simd-stable"] }
noise_lib = { version = "0.7.0", package = "noise" }
parry2d = "0.13.5"
pathfinding = "4.3.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
